--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -54,7 +54,7 @@ const { title } = Astro.props;
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <!-- TODO => Configure this -->
+    <!-- TODO => Configure sitemap and robots.txt -->
     <!-- <link rel="sitemap" href="/sitemap-index.xml" /> -->
     <link rel="canonical" href="https://tomas-lugo-dev-roadmap.vercel.app/" />
     <meta
