mode toggle changed + lenis new values

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -80,6 +80,10 @@
   }
 }
 
+/* **************************************************************************** */
+/* ********************************** LENIS *********************************** */
+/* **************************************************************************** */
+
 html.lenis,
 html.lenis body {
   height: auto;
@@ -100,6 +104,10 @@ html.lenis body {
 .lenis.lenis-scrolling iframe {
   pointer-events: none;
 }
+
+/* **************************************************************************** */
+/* *********************************** HTML *********************************** */
+/* **************************************************************************** */
 
 html {
   scroll-behavior: smooth;
@@ -152,6 +160,10 @@ h3 {
   }
 }
 
+/* **************************************************************************** */
+/* ****************************** CUSTOM CURSOR ******************************* */
+/* **************************************************************************** */
+
 .cursor-dot {
   position: fixed;
   top: -10;
@@ -163,4 +175,26 @@ h3 {
   width: 0.75em;
   height: 0.75em;
   background-color: var(--custom-cursor);
+}
+
+/* **************************************************************************** */
+/* ******************************* THEME CHANGE ******************************* */
+/* **************************************************************************** */
+
+#themeToggle {
+  border: 0;
+  background: none;
+}
+.sun {
+  fill: black;
+}
+.moon {
+  fill: transparent;
+}
+
+.dark .sun {
+  fill: transparent;
+}
+.dark .moon {
+  fill: white;
 }
