--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,42 +5,18 @@ import "@fontsource/kanit";
 import "@fontsource-variable/archivo";
 
 import "../styles/globals.css";
-import { ModeToggle } from "@/components/ModeToggle";
 import Footer from "@/components/Footer.astro";
+import ThemeChanger from "@/components/ThemeChanger/ThemeChanger.astro";
 
 const { title } = Astro.props;
 ---
-
-<script is:inline>
-  const getThemePreference = () => {
-    if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
-      return localStorage.getItem("theme");
-    }
-    return window.matchMedia("(prefers-color-scheme: dark)").matches
-      ? "dark"
-      : "light";
-  };
-  const isDark = getThemePreference() === "dark";
-  document.documentElement.classList[isDark ? "add" : "remove"]("dark");
-
-  if (typeof localStorage !== "undefined") {
-    const observer = new MutationObserver(() => {
-      const isDark = document.documentElement.classList.contains("dark");
-      localStorage.setItem("theme", isDark ? "dark" : "light");
-    });
-    observer.observe(document.documentElement, {
-      attributes: true,
-      attributeFilter: ["class"],
-    });
-  }
-</script>
 
 <script>
   import Lenis from "@studio-freight/lenis";
 
   const lenis = new Lenis({
-    lerp: 0.07,
-    wheelMultiplier: 1,
+    lerp: 0.075,
+    wheelMultiplier: 1.25,
   });
 
   function raf(time: number) {
@@ -120,7 +96,7 @@ const { title } = Astro.props;
       class="fixed z-50 top-4 right-4 animate-fade-in-left animate-delay-1000"
       data-interactive
     >
-      <ModeToggle client:load />
+      <ThemeChanger/>
     </div>
     <slot />
     <CustomCursor />
